--- a/Milestone_5/Module_28.5/leader-board-css3/css/style.css
+++ b/Milestone_5/Module_28.5/leader-board-css3/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-color: royalblue;
+    background-color: whitesmoke;
     font-family: 'Poppins', sans-serif;
 }
 main{
