m-45 v-2: Set Dynamic Content

--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/core_concept/src/App.css
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/core_concept/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  background-color: darkblue;
+  color: #61dafb;
+  padding: 30px;
+  border-radius: 10px;
+}
