--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/core_concept/src/App.css
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/core_concept/src/App.css
@@ -43,3 +43,12 @@
   padding: 30px;
   border-radius: 10px;
 }
+
+.about{
+  background-color: aquamarine;
+  border: 2px solid #61dafb;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 40px;
+
+}
