--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/rest_countries/src/components/Countries/Countries.css
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/rest_countries/src/components/Countries/Countries.css
@@ -5,3 +5,8 @@
     padding: 20px;
     border-radius: 30px;
 }
+
+.countries_container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
