--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/ema_jhon/src/components/Shop/Shop.css
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/ema_jhon/src/components/Shop/Shop.css
@@ -8,3 +8,12 @@
     margin-left: 50px;
     margin-right: 5px;
 }
+
+.search_container{
+    background-color: rgba(0, 0, 0, 0.85);
+    text-align: center;
+    line-height: 40px;
+}
+.search_container input{
+    width: 75%;
+}
