m49 v7: Display dynamic ratings

--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/ema_jhon/src/components/Product/Product.css
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/ema_jhon/src/components/Product/Product.css
@@ -9,10 +9,13 @@
     font-weight: 400;
 }
 .btn_regular{
-    background-color: goldenrod;
+    background-color: gold;
     width: 150px;
     height: 25px;
     border: 1px solid gray;
     border-radius: 5px;
     cursor: pointer;
+}
+.icon_color{
+    color: gold;
 }
